bloco2/b2_04/PrefixCalc.g4
grammar PrefixCalc;

program: 
    stat* EOF
    ;

stat:
    expr? NEWLINE
    ;

expr:
    op=('+'|'-'|'/'|'*') expr expr      #ExprPrefix
    | Number                            #ExprNumber
    ;

Number: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n'; 
WS: [ \t]+ -> skip;
